--- a/resources/sass/overrides.scss
+++ b/resources/sass/overrides.scss
@@ -1,6 +1,3 @@
-.sidebar #sidebarToggle::after {
-    font-weight: 900;
-    content: "\F104";
-    font-family: "FontAwesome";
-    margin-right: 0.1rem;
+.nav-link.hoatdong{
+    background-color: rgba(255, 255, 255, 0.1);
 }
