--- a/resources/sass/overrides.scss
+++ b/resources/sass/overrides.scss
@@ -1,3 +1,9 @@
 .nav-link.hoatdong{
     background-color: rgba(255, 255, 255, 0.1);
 }
+.bg-orange{
+    background-color: orange !important;
+}
+table.dataTable{
+    border-collapse: collapse !important;
+}
